  - Corrected title creation bug exposed by restoring narrowing.
- v1.1.11
  - Raw HTML support with ~wp~ snippets and blocks for more straightforward custom HTML.
  - Narrowing approach to store multiple posts in a single file makes exporting to other formats easier.
  - Improved Contribution Expectations for Documentation and Coding style makes contributing easier.
  - Added Issue template, Bug report template, and Pull request template for easier creation and resolution.
  - Unfilled documentation making grammar enabling the use of checking tools for more straightforward grammar checking.
  - Structure templates for inserting RAW HTML using snippets or blocks.
  - Minor refactorings to ease maintenance.
  - Added testimonials for the fun of it.
  - After this release, only bug fixes: new development in v1.2.0 branch starting with migration to the latest Emacs and Org mode.
- v1.1.12
  - Correctly use and document autoloads
  - Don't populate kill ring with version message
  - Documentation cleanup

** v1.1.13-

- v1.1.13
  - Emacs v27.1 🠆 v28.1
  - Org v9.1.9 🠆 9.5.2
  - HTMLize v1.54 🠆 v1.56
  - XML-RPC v1.6.12 🠆 1.6.15
  - Convert system definition from hashtables to structs
  - Load categories, tags, and pages without failing on error
  - Add tag checkout to org2blog-def-checkout-statement

* v1.0
** v1.0.00

Communicate completeness of the library with a first major release.

** v1.0.01

Use latest metaweblog

** v1.0.02

Increment for new metaweblog version.

** v1.0.03

Adds Hydra support for user-interface.

* v0.9
** v0.9.01

Bump up version to 0.9.1.

** v0.9.02

Bump up version.

** v0.9.03

- v0.9.2 ad389ae was released on 14-12-14
- Development continued until 16-05-02 fc7b2d9
- Today is 17-05-19
  - It has been in use for one year and seventeen days
- And today
  - Merged post subtree and publish and it is fine
  - Added dependency on Org-Mode 8.3
- So therefore a new release
  - v0.9.3
